[gd_scene load_steps=4 format=3 uid="uid://btudaqt3ssook"]

[ext_resource type="Script" uid="uid://cspg52nusgebi" path="res://script/levels_screen.gd" id="1_r3q7a"]
[ext_resource type="Texture2D" uid="uid://clch8r61b7v5e" path="res://assets/spaceTitleScreen.png" id="2_5tufe"]
[ext_resource type="Theme" uid="uid://bwmoc62uymsn6" path="res://pause_menu_theme.tres" id="3_q25b7"]

[node name="LevelsScreen" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r3q7a")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(610, 326)
scale = Vector2(0.212656, 0.212656)
texture = ExtResource("2_5tufe")

[node name="back_bttn" type="Button" parent="."]
layout_mode = 0
offset_left = 14.0
offset_top = 594.0
offset_right = 108.0
offset_bottom = 635.0
theme = ExtResource("3_q25b7")
text = "Back"

[node name="level_buttons" type="HFlowContainer" parent="."]
layout_mode = 0
offset_left = 19.0
offset_top = 89.0
offset_right = 1129.0
offset_bottom = 580.0
theme = ExtResource("3_q25b7")

[node name="level_1" type="Button" parent="level_buttons"]
layout_mode = 2
text = "1"

[node name="level_2" type="Button" parent="level_buttons"]
layout_mode = 2
text = "2"

[node name="level_3" type="Button" parent="level_buttons"]
layout_mode = 2
text = "3"

[node name="level_4" type="Button" parent="level_buttons"]
layout_mode = 2
text = "4"

[node name="level_5" type="Button" parent="level_buttons"]
layout_mode = 2
text = "5"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 456.0
offset_top = -4.0
offset_right = 782.0
offset_bottom = 63.0
theme = ExtResource("3_q25b7")
theme_override_font_sizes/normal_font_size = 50
text = "Levels"

[connection signal="button_down" from="back_bttn" to="." method="_on_back_bttn_button_down"]
[connection signal="button_down" from="level_buttons/level_1" to="." method="_on_level_1_button_down"]
[connection signal="button_down" from="level_buttons/level_2" to="." method="_on_level_2_button_down"]
[connection signal="button_down" from="level_buttons/level_3" to="." method="_on_level_3_button_down"]
